--- a/iTrust2/src/main/resources/views/labtech/viewLabRequests.html
+++ b/iTrust2/src/main/resources/views/labtech/viewLabRequests.html
@@ -19,8 +19,11 @@
 
         $scope.requests = [];
         $scope.statuses = [];
+        $scope.labTechs = [];
         $scope.selectedRequest = {};
-        
+        $scope.toTransfer = false;
+        $scope.currentUser = /*[[${#httpServletRequest.remoteUser}]]*/null;
+                
         $scope.loadTable = function () {
           $http.get("/iTrust2/api/v1/labrequests/labtech").then(
             function (response) {
@@ -43,17 +46,46 @@
               });
         }
         
+        $scope.retrieveLabTechs = function() {
+            $http.get("/iTrust2/api/v1/users/labtechs").then(
+            	function (response) {
+            		for (var i=0;i<response.data.length;i++) {
+            			if (response.data[i].username != $scope.currentUser) {
+            				$scope.labTechs.push(response.data[i].username);
+            			}
+            		}
+                    $scope.message = "";
+            	}, function (rejection) {
+                    $scope.labTechs = [];
+                    $scope.message = "Could retrieve statuses";
+                });
+        }
+        
         $scope.editRequest = function (request) {
             $scope.selectedRequest = angular.copy(request);
+            $scope.toTransfer = false;
+          };
+          
+        $scope.transferRequest = function (request) {
+            $scope.selectedRequest = angular.copy(request);
+            $scope.toTransfer = true;
           };
         
         $scope.getTemplate = function (request) {
-            if (request.id === $scope.selectedRequest.id) return 'edit';
-            else return 'view';
-          };
+            if (request.id === $scope.selectedRequest.id) {
+            	if ($scope.toTransfer) {
+            		return 'transfer';
+            	} else {
+            		return 'edit';
+            	}
+            } else { 
+            	return 'view';
+            }
+        };
         
         $scope.resetSelected = function () {
             $scope.selectedRequest = {};
+            $scope.toTransfer = false;
           };
           
         $scope.saveRequest = function() {
@@ -70,6 +102,7 @@
         // load table initially
         $scope.loadTable();
         $scope.retrieveStatuses();
+        $scope.retrieveLabTechs();
       });
 			/*]]>*/
     </script>
@@ -116,8 +149,11 @@
 									<td name="commentsCell">{{r.comments}}</td>
                 					<td>
                    						<div class="row text-center">
-                     						<div class="col-md-12">
+                     						<div class="col-md-6">
                         						<input type="button" value="Edit" class="btn btn-primary" name="editRequest" ng-click="editRequest(r)" />                         
+                      						</div>
+                     						<div class="col-md-6">
+                        						<input type="button" value="Transfer" class="btn btn-primary" name="transferRequest" ng-click="transferRequest(r)" />                         
                       						</div>
                     					</div>
                   					</td>
@@ -132,7 +168,9 @@
 										<select ng-model="selectedRequest.status" ng-options="s for s in statuses">Status</select>
 									</td>
                   					<td name="editCommentsCell">
-                    					<input type="text" class="form-control" ng-model="selectedRequest.comments" />
+                    					<input type="text" class="form-control" ng-model="selectedRequest.comments" 
+											ng-disabled="selectedRequest.status != 'COMPLETED' 
+											&& selectedRequest.status != 'REJECTED'" />
                   					</td>
                   					<td>
                     					<div class="row text-center">
@@ -145,6 +183,34 @@
                     					</div>
                   					</td>
                 				</script>
+                        
+                                <!-- table in transfer mode -->
+                                  <script type="text/ng-template" id="transfer">
+                  					<td name="codeCell">{{r.labProcedure}}</td>
+                  				    <td name="assignerCell">{{r.hcp}}</td>
+                  					<td name="priorityCell">{{r.priority}}</td>
+                  					<td name="statusCell">{{r.status}}</td>
+                            		<td name="editCommentsCell">{{r.comments}}</td>
+                            		<td>
+                              			<div class="row text-center">
+                                  			<div class="col-md-6">
+                                      			<input type="button" value="Send" class="btn btn-success" name="saveRequest" ng-click="saveRequest()" />                          
+                                  			</div>
+                                  			<div class="col-md-6">
+                                      			<input type="button" value="Cancel" class="btn btn-danger" name="cancelRequest" ng-click="resetSelected()" />                            
+                                 			</div>
+                              			</div>
+										<br>
+                              			<div class="row text-center">
+                                  			<div class="col-md-6">
+                                      			<p>Send to:</p>                       
+                                  			</div>
+                                  			<div class="col-md-6">
+												<select ng-model="selectedRequest.labTech" ng-options="l for l in labTechs"></select>
+                                  			</div>
+                              			</div>
+                          			</td>
+                        		</script>
 							</div>
 						</div>
 					</div>
